# life-memory-bank

./: .eslintrc.json  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  forge.config.ts  package-lock.json  package.json  tsconfig.json  webpack.main.config.ts  webpack.plugins.ts  webpack.renderer.config.ts  webpack.rules.ts
.clinerules/workflows/: new-session.md
docs/: CHANGELOG_WORKFLOW.md
memory-bank/: activeContext.md  productContext.md  progress.md  projectbrief.md  systemPatterns.md  techContext.md
memory-bank/tasks/: TASK001-project-setup.md  TASK002-project-initialization.md  TASK003-electron-setup.md  TASK004-build-system.md  TASK005-basic-app-structure.md  TASK006-recording-functionality.md  TASK007-recordings-list-ui.md  TASK008-whisper-transcription.md  TASK009-openai-integration.md  TASK010-ai-summary-button.md  TASK011-concurrent-transcriptions.md  TASK012-fix-transcription-progress.md  TASK013-update-recording-list-ui.md  TASK014-import-external-recordings.md  TASK015-openai-speech-to-text.md  TASK016-system-audio-meeting-detection.md  TASK017-system-tray-integration.md  TASK018-calendar-integration-meeting-prediction.md  TASK019-fix-timestamp-timezone-bug.md  TASK020-real-time-transcription.md  (+6 more)
python/: ai_worker.py  pyproject.toml
scripts/: fix-html-paths.js  generate-assets.cjs  generate-icons.cjs  release.js
src/: declarations.d.ts  index.css  index.html  preload.ts
voice-mcp/: .eslintrc.json  entitlements.plist  package-lock.json  package.json  tsconfig.renderer.json  webpack.main.config.ts  webpack.plugins.ts  webpack.rules.ts
(+105 files in other folders)
