[project]
name = "voice-mcp-ai"
version = "0.1.0"
description = "AI workers for VoiceMCP (Whisper + OpenAI)"
requires-python = ">=3.8"
dependencies = [
    "openai-whisper>=20240930",
    "torch>=2.0.0,<3.0.0",
    "numpy>=1.21.0",
    "ffmpeg-python>=0.2.0",
    "langchain>=0.3.0",
    "langchain-openai>=0.2.0",
    "openai>=1.0.0"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.uv]
dev-dependencies = []
